jsgui/jsgui.css
/* ... */
.textarea:empty::after {
  position: relative;
  content: attr(placeholder);
  color: var(--gray-4);
  cursor: text;
}
dialog {
  outline: none;
  border: none;
  border-radius: 8px;
  padding: 16px;
  border-bottom: 1px solid var(--gray-6);
  box-shadow: 0 1px 0 0 var(--gray-6);
}
dialog::backdrop {
  background: var(--gray-4);
}
.popup {
  inset: unset;
  max-width: unset;
  position: absolute;
  top: 0;
  left: 0;
  padding: 0;
  margin: 0;
  border: none;
  outline: none;
  box-shadow: none;
  background: transparent;
  /* NOTE: Scrolling inside .popup only scrolls the <html> tag, there is nothing we can do. */
}
.popup-content-wrapper {
  max-width: calc(100vw - var(--scrollbarWidth));
  width: fit-content;
  border-radius: 8px;
  padding: 4px 8px;
  background: lightgray; /* TODO: background color */
}
.popup[data-interactable="false"] {
  pointer-events: none;
  user-select: none;
}
/* inputs */
.colored-button {
  border: none;
  border-radius: 4px;
  padding: 0px 6px;
  height: calc(var(--size) + 2px);
  background: var(--buttonColor);
  transition: background-color 0.2s var(--timing-0d);
  border-bottom: 1px solid var(--gray-6);
  box-shadow: 0 1px 0 0 var(--gray-6);
  font-family: var(--fontFamily-button);
  color: var(--buttonFontColor);
  display: inline-flex;
  align-items: center;
  gap: 0;
  --buttonColor: var(--gray-6);
  --buttonColorHover: var(--gray-5); /* TODO!: fold this into one css var */
  --buttonColorActive: var(--gray-4);
  --buttonFontColor: var(--gray-0);
}
.colored-button[data-color="secondary"] {
  --buttonColor: var(--secondary-0);
  --buttonColorHover: var(--secondary-2);
  --buttonColorActive: var(--secondary-3);
  --buttonFontColor: white;
}
.colored-button:hover:not([disabled]) {
  background: var(--buttonColorHover);
  box-shadow: none;
}
.colored-button:active:not([disabled]) {
  background: var(--buttonColorActive);
  margin-top: 1px;
  height: calc(var(--size) + 1px);
  border-bottom: none;
}
.colored-button:not([disabled]) {
  cursor: pointer;
}
.colored-button[disabled] {
  --buttonFontColor: var(--gray-0);
  background-color: var(--gray-6);
  opacity: 0.5; /* TODO */
}
.colored-button > span:not(.icon) {
  font-size: var(--fontSize);
  line-height: var(--size);
  align-self: flex-start;
}
.colored-button .icon {
  color: var(--buttonFontColor); /* TODO: invert grays? */
}
.colored-button > .icon {
  padding-inline: 0;
}
.labeled-input {
  --fieldsetMarginInline: 1px;
  --fieldsetMargin: 0 var(--fieldsetMarginInline) var(--inputLabelSizeHalf);
  margin: var(--fieldsetMargin);

  --fieldsetBorderWidth: 1px;
  --fieldsetBorderColor: var(--gray-4);
  --fieldsetBorderRadius: 4px;
  border: var(--fieldsetBorderWidth) solid var(--fieldsetBorderColor);
  border-radius: var(--fieldsetBorderRadius);

  width: calc(var(--inputWidth) - 2*var(--fieldsetMarginInline));
  flex-grow: 0;
  min-width: calc(var(--inputMinWidth) - 2*var(--fieldsetMarginInline));
  height: calc(var(--inputHeight) - var(--inputLabelSizeHalf));
  cursor: text;

  --labelColor: var(--gray-3);
  --labelMarginLeft: 6px;
  padding: 0;
  display: flex;
  justify-content: space-between;
}
.labeled-input:hover {
  --fieldsetBorderColor: var(--gray-3);
}
.labeled-input:focus-within {
  --fieldsetMarginInline: 0px; /* NOTE: calc() freaks out if this is just `0` */
  --fieldsetBorderWidth: 2px;
  --fieldsetBorderColor: var(--secondary-0);
  --labelColor: var(--secondary-0);
}
.labeled-input[fieldset-error="true"] {
  --fieldsetBorderColor: var(--red-0);
  --labelColor: var(--red-0);
}
.labeled-input legend {
  white-space: pre;
  color: var(--labelColor);
  user-select: none;
  font-size: var(--inputLabelSize);
  line-height: 1;
  margin-left: var(--labelMarginLeft);
  padding-inline: 4px;
  max-width: calc(var(--inputWidth) - 33px);
}
.labeled-input > :not(legend) {
  position: relative;
  background: none;
  top: calc(-1*var(--inputLabelSizeHalf));
  height: var(--inputHeightSmall);
}
.labeled-input input {
  width: 100%;
  outline: none;
  border: none;
  flex: 1;
  padding: 4px 8px 0 calc(4px + var(--labelMarginLeft));
  font-family: var(--fontFamily-sans);
  font-size: var(--fontSize-normal);
}
/* number_input */
.number-arrows {
  display: flex;
  flex-direction: column;
  color: var(--gray-3);
}
.number-arrows .icon {
  --iconSize: calc(0.5*var(--inputHeightSmall));
  border-left: 1px solid var(--gray-6);
}
.number-arrows .icon[data-icon="arrow_drop_up"] {
  border-top-right-radius: var(--fieldsetBorderRadius);
}
.number-arrows .icon[data-icon="arrow_drop_down"] {
  border-bottom-right-radius: var(--fieldsetBorderRadius);
}
.number-arrows .icon:hover {
  color: var(--gray-0);
  background: var(--gray-6);
}
.number-arrows .number-arrows-divider {
  position: relative;
  top: -50%;
  width: 100%;
  min-height: 1px;
}
.number-arrows .icon:hover ~ .number-arrows-divider {
  background: red; /* TODO: pick a better color scheme */
}
/* slider_input */
.slider-input {
  --knobSize: 16px;
  --knobSizeHalf: 8px;
  width: var(--inputWidth);
  min-width: var(--inputWidth);
  height: var(--inputHeightSmall);
  padding: 0 var(--knobSizeHalf);
  display: flex;
  align-items: center;
}
/* TODO: hover styles */
.slider-input-rail {
  position: relative;
  border-radius: 2px;
  width: 100%;
  height: 4px;
  background: gray; /* TODO: colors */
}
.slider-input-rail.slider-input-color-rail {
  position: absolute;
  top: 0;
  left: 0;
  background: var(--secondary-0); /* TODO: colors */
}
.slider-input-knob {
  position: absolute;
  top: 50%;
  left: 0;
  border-radius: 50%;
  width: var(--knobSize);
  height: var(--knobSize);
  transform: translate(-50%, -50%);
  background: var(--secondary-0); /* TODO: colors */
  /* box-shadow: rgba(255, 255, 255, 0.25) -1px 0px;*/
}
/* ... */

